--- a/h1ds/deployment/gunicorn/h1ds.sh.template
+++ b/h1ds/deployment/gunicorn/h1ds.sh.template
@@ -7,6 +7,10 @@ ADDRESS=unix:/tmp/h1ds.gunicorn.sock
 export DJANGO_SETTINGS_MODULE=h1ds.settings.$environment
 cd $virtualenv_dir
 source bin/activate
+if [ -e /usr/local/mdsplus/setup.sh ]
+then
+  source /usr/local/mdsplus/setup.sh
+fi
 export PYTHONPATH=${django_project_dir}:$$PYTHONPATH
 exec bin/gunicorn h1ds.wsgi:application -w $$NUM_WORKERS \
     --log-level=error --bind=$$ADDRESS -k gevent \
